Cleaning up Tools pages, adding breadcrumbs and resident search form
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -258,7 +258,7 @@ div#header_search ul.link-tabs li.off a {
 	padding : 0.1em .5em .2em .5em;
 }
 
-div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search {
+div#circ_search,div#catalog_search,div#patron_search,div#subscription_search,div#addbooks_search,div#notices_search {
 	border : 0;
 	border-bottom : 1px solid #FF9900;
 	padding : 0 0 .2em 0;
@@ -417,4 +417,14 @@ ul.innerBox {
 div.yui-b h5 {
 	font-size : 100%;
 	margin : .5em 0;
+}
+
+dt {
+	font-size : 110%;
+	font-weight : bold;
+}
+
+dd {
+	padding : .2em;
+	text-indent : 1.5em;
 }
