--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/cleanborrowers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/cleanborrowers.tmpl
@@ -2,7 +2,7 @@
 <title>Koha &rsaquo; Tools &rsaquo; Clean Patron Records</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
-<script type="text/javascript" language="JavaScript">
+<script type="text/javascript">
 // <![CDATA[
         /**
          *  checkForm(form)
