--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/export.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/export.tmpl
@@ -1,12 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; MARC Export</title>
+<title>Koha &rsaquo; Tools &rsaquo; MARC Export</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; MARC Export</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/tools/tools-home.pl">Tools</a> &rsaquo; MARC Export</div>
 
 <div id="doc3" class="yui-t2">
    
