--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/inventory.tmpl
@@ -1,17 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Inventory</title>
+<title>Koha &rsaquo; Tools &rsaquo; Inventory</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
-<!-- End of additions -->
+<!-- TMPL_INCLUDE NAME="calendar.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
+<!-- TMPL_INCLUDE NAME="cat-search.inc"-->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/tools-home.pl">Tools</a> &rsaquo; Inventory</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -20,29 +16,29 @@
 	<div class="yui-b">
 
     <h1>Inventory/Stocktaking</h1>
-    <form method="post">
+    <form method="post" action="/cgi-bin/koha/tools/inventory.pl">
         <fieldset>
         <legend>Select items you want to check</legend>
         <p>
-        <label>Branch</label><select id="branchloop" name="branchcode">
+        <label for="branchloop">Branch</label><select id="branchloop" name="branchcode">
         <!-- TMPL_LOOP NAME="branchloop" -->
             <!-- TMPL_IF name="selected" -->
-                <option value="<!-- TMPL_VAR NAME='value' -->" selected="selected"><!-- TMPL_VAR NAME='branchname' --></option>
+                <option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME='branchname' --></option>
             <!-- TMPL_ELSE -->
-                <option value="<!-- TMPL_VAR NAME='value' -->"><!-- TMPL_VAR NAME='branchname' --></option>
+                <option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME='branchname' --></option>
             <!-- /TMPL_IF -->
         <!-- /TMPL_LOOP -->
         </select>
         </p>
         <p>
-            Item Location (items.itemcallnumber) between 
-                <input type="text" name="minlocation" value="<!-- TMPL_VAR NAME="minlocation" -->" /> 
-            and 
-                <input type="text" name="maxlocation" value="<!-- TMPL_VAR NAME="maxlocation" -->" />
+            <label for="minlocation">Item Location (items.itemcallnumber) between</label> 
+                <input type="text" name="minlocation" id="minlocation" value="<!-- TMPL_VAR NAME="minlocation" -->" /> 
+            <label for="maxlocation">and</label> 
+                <input type="text" name="maxlocation" id="maxlocation" value="<!-- TMPL_VAR NAME="maxlocation" -->" />
         </p>
         <!-- TMPL_IF NAME="authorised_values" -->
         <p>
-            Item Location (items.location) is 
+            <label for="locationloop">Item Location (items.location) is</label> 
         <select id="locationloop" name="location">
                 <option value="">Filter location</option>
         <!-- TMPL_LOOP NAME="authorised_values" -->
@@ -54,10 +50,10 @@
         <!-- /TMPL_LOOP -->
         </select>        </p>
         <!-- /TMPL_IF -->
-        <p><label>Not seen since:</label>
+        <p><label for="datelastseen">Not seen since:</label>
             <input type="text" id="datelastseen" name="datelastseen" value="<!-- TMPL_VAR NAME="datelastseen" -->" />
-            <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="datelastseen_button" />
-            <script language="JavaScript" type="text/javascript">
+            <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="datelastseen_button" alt="Show Calendar" />
+            <script type="text/javascript">
             Calendar.setup(
             {
             inputField : "datelastseen",
@@ -67,24 +63,24 @@
             );
             </script>
         </p>
-        <p><label>Show:</label>
-            <input type="text" name="pagesize" value="<!-- TMPL_VAR NAME="pagesize" -->" maxlength="5" size="5" />
-            <i> items beginning at offset</i>
-            <input type="text" name="offset" value="<!-- TMPL_VAR NAME="offset" -->" size="5" maxlength="5" />
+        <p><label for="pagesize">Show:</label>
+            <input type="text" id="pagesize" name="pagesize" value="<!-- TMPL_VAR NAME="pagesize" -->" maxlength="5" size="5" />
+            <label for="offset"> items beginning at offset</label>
+            <input type="text" id="offset" name="offset" value="<!-- TMPL_VAR NAME="offset" -->" size="5" maxlength="5" />
         </p>
         <p>
             <input type="hidden" name="op" value="do_it" />
-            <input type="submit" value="OK" class="button reports" />
+            <input type="submit" value="OK" class="button" />
         </p>
         </fieldset>
     </form>
-    <form name="barcodefile" method="post">
+    <form name="barcodefile" method="post" action="/cgi-bin/koha/tools/inventory.pl">
         <fieldset>
             <legend>Use a barcode file</legend>
-            <p>barcode filename : <input type="file" name="uploadbarcodes" /></p>
-            <p>Set datelastseen to : <input type="text" id="setdate" name="setdate" />
-             <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="setdate_button" />
-            <script language="JavaScript" type="text/javascript">
+            <p><label for="uploadbarcodes">Barcode file name :</label> <input type="file" id="uploadbarcodes" name="uploadbarcodes" /></p>
+            <p><label for="setdate">Set datelastseen to :</label> <input type="text" id="setdate" name="setdate" />
+             <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="setdate_button" alt="Show Calendar" />
+            <script type="text/javascript">
             Calendar.setup(
             {
             inputField : "setdate",
@@ -94,7 +90,7 @@
             );
             </script>
 </p>
-            <p><input type="submit" value="OK" class="button reports"></p>
+            <p><input type="submit" value="OK" class="button" /></p>
         </fieldset>
     </form>
     <!--TMPL_IF Name="Number" --><p><!--TMPL_VAR Name="Number"--> items modified : datelastseen set to <!--TMPL_VAR Name="date"--></p><!-- /TMPL_IF-->
@@ -109,7 +105,7 @@
         </p>
     <!-- /TMPL_LOOP-->
     <!-- TMPL_IF NAME="loop" -->
-    <form method="post">
+    <form method="post" action="/cgi-bin/koha/tools/inventory.pl">
     <input type="hidden" name="markseen" value="1" />
     <input type="hidden" name="minlocation" value="<!-- TMPL_VAR NAME="minlocation" -->" />
     <input type="hidden" name="maxlocation" value="<!-- TMPL_VAR NAME="maxlocation" -->" />
@@ -146,7 +142,7 @@
     <input type="submit" value="Mark seen" />
     </form>
     <!-- TMPL_IF NAME="offset" -->
-    <form method="post">
+    <form method="post" action="/cgi-bin/koha/tools/inventory.pl">
         <input type="hidden" name="minlocation" value="<!-- TMPL_VAR NAME="minlocation" -->" />
         <input type="hidden" name="maxlocation" value="<!-- TMPL_VAR NAME="maxlocation" -->" />
         <input type="hidden" name="location" value="<!-- TMPL_VAR NAME="location" -->" />
