--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/itemslost.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/itemslost.tmpl
@@ -6,23 +6,24 @@
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/tools-home.pl">Tools</a> &rsaquo; Lost Items</div>
+
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
 
-<h1>Items lost</h1>
+<h1>Lost Items</h1>
 
-<b>
+<div class="results">
     <!-- TMPL_IF NAME="total" -->
-        <!-- TMPL_VAR NAME="total" --> lost item found.
+        <!-- TMPL_VAR NAME="total" --> lost item(s) found.
     <!-- TMPL_ELSE-->
-        No lost item found...
+        No lost items found.
     <!-- /TMPL_IF -->
-</b>
-<br />
-<br />
+</div>
+
 <form name="f" action="/cgi-bin/koha/tools/itemslost.pl" method="post">
     <label for="orderbyfilter">Set result order by</label>
     <select id="orderbyfilter" name="orderbyfilter">
@@ -36,40 +37,19 @@
     <input type="hidden" name="get_items" value="1" />
     <table>
     <tr>
-        <th>
-            Barcode
-        </th>
-        <th>
-            Date last seen
-        </th>
-        <th>
-            Price
-        </th>
-        <th>
-            Branch
-        </th>
-        <th>
-            Itemtype
-        </th>
-        <th>
-            Holdingbranch
-        </th>
-        <th>
-            Location
-        </th>
+        <th>Barcode</th>
+        <th>Date last seen</th>
+        <th>Price</th>
+        <th>Branch</th>
+        <th>Itemtype</th>
+        <th>Holdingbranch</th>
+        <th>Location</th>
     </tr>
     <tr>
-        <td>
-            <input type="text" name="barcodefilter" size="6" />
-        </td>
-        <td>
-            <!-- datelastseen -->
-        </td>
-        <td>
-            <!-- price -->
-        </td>
-        <td>
-            <select name="branchfilter">
+        <td><input type="text" name="barcodefilter" size="6" /></td>
+        <td><!-- datelastseen --></td>
+        <td><!-- price --></td>
+        <td><select name="branchfilter">
                 <option value="">All</option>
             <!-- TMPL_LOOP name="branchloop" -->
                 <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="branchname" --></option>
@@ -77,10 +57,8 @@
 				<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="branchname" --></option>
 				<!-- /TMPL_IF -->
             <!-- /TMPL_LOOP -->
-            </select>
-        </td>
-        <td>
-            <select name="itemtypesfilter">
+            </select></td>
+        <td><select name="itemtypesfilter">
                 <option value="">All</option>
                 <!-- TMPL_LOOP name="itemtypeloop" -->
                 <!-- TMPL_IF NAME="selected" --><option value="<!-- TMPL_VAR NAME="value" -->" selected="selected"><!-- TMPL_VAR NAME="description" --></option>
@@ -88,40 +66,21 @@
 				<option value="<!-- TMPL_VAR NAME="value" -->"><!-- TMPL_VAR NAME="description" --></option>
 				<!-- /TMPL_IF -->
                 <!-- /TMPL_LOOP -->
-            </select>
-        </td>
-        <td>
-            <!-- holdingbranch -->
-        </td>
-        <td>
-            <!-- location -->
-        </td>
+            </select></td>
+        <td><!-- holdingbranch --></td>
+        <td><!-- location --></td>
     </tr>
      <!-- TMPL_LOOP NAME="itemsloop"-->
         <tr>
-            <td>
-                <a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber"-->" title="<!-- TMPL_VAR NAME="itemnotes"-->">
+            <td><a href="/cgi-bin/koha/catalogue/detail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber"-->" title="<!-- TMPL_VAR NAME="itemnotes"-->">
                     <!-- TMPL_VAR NAME="barcode"-->
-                </a>
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="datelastseen"-->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="price" -->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="homebranch" -->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="itemtype" -->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="holdingbranch"-->
-            </td>
-            <td>
-                <!-- TMPL_VAR NAME="location"-->
-            </td>
+                </a></td>
+            <td><!-- TMPL_VAR NAME="datelastseen"--></td>
+            <td><!-- TMPL_VAR NAME="price" --></td>
+            <td><!-- TMPL_VAR NAME="homebranch" --></td>
+            <td><!-- TMPL_VAR NAME="itemtype" --></td>
+            <td><!-- TMPL_VAR NAME="holdingbranch"--></td>
+            <td><!-- TMPL_VAR NAME="location"--></td>
         </tr>
     <!-- /TMPL_LOOP -->
     </table>
