--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/koha-news.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/koha-news.tmpl
@@ -1,17 +1,13 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; News Management</title>
+<title>Koha &rsaquo; Tools &rsaquo; Koha News</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<!-- End of additions --><!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
-<!-- End of additions -->
+<!-- TMPL_INCLUDE NAME="calendar.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/tools-home.pl">Tools</a> &rsaquo; Koha News</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -21,7 +17,7 @@
 
 
 <div id="koha-news_main" class="searchresults">
-    <h1> OPAC &amp; KOHA News</h1>
+    <h1> OPAC and Koha News</h1>
     <!-- TMPL_IF name="add_form" -->
         <form name="add_form" method="post" action="/cgi-bin/koha/tools/koha-news.pl" >
             <input type="hidden" name="op" value="<!-- TMPL_VAR NAME="op" -->" />
@@ -31,14 +27,8 @@
             <select id="lang" name="lang">
                 <option value="koha">Librarian interface</option>
                 <!-- TMPL_LOOP name="lang_list" -->
-                    <!-- TMPL_IF name="selected" -->
-                        <option value="<!-- TMPL_VAR name="language" -->" selected="selected">
-                    <!-- TMPL_ELSE -->
-                        <option value="<!-- TMPL_VAR name="language" -->">
-                    <!-- /TMPL_IF -->
-                        <!-- TMPL_VAR name="language" -->
-                    </option>
-                <!-- /TMPL_LOOP" -->
+                    <!-- TMPL_IF name="selected" --><option value="<!-- TMPL_VAR name="language" -->" selected="selected"><!-- TMPL_VAR name="language" --></option><!-- TMPL_ELSE --><option value="<!-- TMPL_VAR name="language" -->"><!-- TMPL_VAR name="language" --></option><!-- /TMPL_IF -->
+                <!-- /TMPL_LOOP -->
             </select>
             </p>
             <p>
@@ -60,7 +50,7 @@
             <p>
                 <label for="number">Appear in position </label>
                 <!-- TMPL_IF NAME="number"-->
-                    <input id="number" size="3" name="number" type="text" checked="1" />
+                    <input id="number" size="3" name="number" type="text" checked="checked" />
                 <!-- TMPL_ELSE -->
                     <input id="number" size="3" name="number" type="text" />
                 <!-- /TMPL_IF -->
@@ -82,15 +72,15 @@
             <option value="koha">Librarian interface</option>
                 <!-- TMPL_LOOP name="lang_list" -->
                     <!-- TMPL_IF name="selected" -->
-                        <option value="<!-- TMPL_VAR name="language" -->" selected />
+                        <option value="<!-- TMPL_VAR name="language" -->" selected="selected">
                     <!-- TMPL_ELSE -->
-                        <option value="<!-- TMPL_VAR name="language" -->" />
+                        <option value="<!-- TMPL_VAR name="language" -->">
                     <!-- /TMPL_IF -->
                         <!-- TMPL_VAR name="language" -->
                     </option>
-                <!-- /TMPL_LOOP" -->
+                <!-- /TMPL_LOOP -->
             </select>
-            <input type="submit" class="button" value="Filter">
+            <input type="submit" class="button" value="Filter" />
             </form>
         </div>
         <!-- TMPL_IF NAME="opac_news_count" -->
@@ -98,14 +88,14 @@
             <form name="del_form" method="post" action="/cgi-bin/koha/tools/koha-news.pl" onsubmit="return confirm('Are you sure you want to delete the selected news?')">
                 <table>
                     <tr>
-                        <th></th>
+                        <th>&nbsp;</th>
                         <th>Language</th>
                         <th>Number</th>
                         <th>Creation Date</th>
                         <th>Expiration Date</th>
                         <th>Title</th>
                         <th>News</th>
-                        <th></th>
+                        <th>&nbsp;</th>
                     </tr>
                     <!-- TMPL_LOOP NAME="opac_news" -->
                         <tr>
@@ -124,11 +114,7 @@
                             <!-- /TMPL_IF -->
                                 <!-- TMPL_VAR NAME="new" -->
                             </td>
-                            <td>
-                                <a href="/cgi-bin/koha/tools/koha-news.pl?op=add_form&amp;id=<!-- TMPL_VAR NAME="idnew" -->">
-                                    Edit
-                                </a>
-                            </td>
+                            <td><a href="/cgi-bin/koha/tools/koha-news.pl?op=add_form&amp;id=<!-- TMPL_VAR NAME="idnew" -->">Edit</a></td>
                         </tr>
                     <!-- /TMPL_LOOP -->
                 </table>
