--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/letter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/letter.tmpl
@@ -1,57 +1,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Letters Administration</title>
+<title>Koha &rsaquo; Tools &rsaquo; Letters<!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF name="modify" --> &rsaquo; Modify letter<!-- TMPL_ELSE --> &rsaquo; Add letter<!-- /TMPL_IF --><!-- /TMPL_IF --><!-- TMPL_IF NAME="add_validate" --> &rsaquo; Letter added<!-- /TMPL_IF --><!-- TMPL_IF NAME="delete_confirm" --> &rsaquo; Confirm Deletion<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-</head>
-<body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
-
-<div id="doc3" class="yui-t2">
-   
-   <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b">
-
-	<!-- TMPL_IF NAME="else" -->
-		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
-		<input type="text" name="searchfield" value="">
-		<input type="submit" class="button" value="Filter"></form>
-		<!-- TMPL_IF NAME="search" -->
-		<br />You Searched for <b><!-- TMPL_VAR NAME="searchfield" --></b><p><br />
-		<!-- /TMPL_IF -->
-		<table>
-		<tr>
-			<th>Module</th>
-			<th>Code</th>
-			<th>Name</th>
-			<th>&nbsp;</th>
-			<th>&nbsp;</th>
-		</tr>
-		<!-- TMPL_LOOP NAME="letter" -->
-			<tr bgcolor=<!-- TMPL_VAR NAME="toggle" --> >
-				<td><!-- TMPL_VAR NAME="module" --></td>
-				<td><!-- TMPL_VAR NAME="code" --></td>
-				<td><!-- TMPL_VAR NAME="name" --></td>
-				<td>
-					<a href="/cgi-bin/koha/tools/letter.pl?op=add_form&amp;module=<!-- TMPL_VAR name="module" -->&amp;code=<!-- TMPL_VAR NAME="code" -->">Edit</a>
-				</td>
-				<td>
-					<a href="/cgi-bin/koha/tools/letter.pl?op=delete_confirm&amp;module=<!-- TMPL_VAR name="module"-->&amp;code=<!-- TMPL_VAR NAME="code" -->">Delete</a>
-				</td>
-			</tr>
-		<!-- /TMPL_LOOP -->
-		</table>
-		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
-			<input type="hidden" name="op" value="add_form">
-			<br />
-			<input type="submit" class="button" value="Add Letter" title="Add Letter" alt="Add Letter">
-			<br />
-		</form>
-		<br clear="all">
-	<!-- /TMPL_IF -->
-	
-	<!-- TMPL_IF NAME="add_form" -->
-	<script language="javascript" type="text/javascript">
+<!-- TMPL_IF NAME="add_form" -->
+	<script type="text/javascript">
+	//<![CDATA[
 		/////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 		function isNotNull(f,noalert) {
 			if (f.value.length ==0) {
@@ -138,20 +90,71 @@
 				}
 			}
 		}
-		
+		//]]>
 		</script>
+	<!-- /TMPL_IF -->
+</head>
+<body>
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="letters-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/tools-home.pl">Tools</a> &rsaquo; <!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF name="modify" --><a href="/cgi-bin/koha/tools/letter.pl">Letters</a> &rsaquo; Modify letter<!-- TMPL_ELSE --> <a href="/cgi-bin/koha/tools/letter.pl">Letters</a> &rsaquo; Add letter<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="add_validate" --> <a href="/cgi-bin/koha/tools/letter.pl">Letters</a> &rsaquo; Letter added<!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" --> <a href="/cgi-bin/koha/tools/letter.pl">Letters</a> &rsaquo; Confirm Deletion<!-- TMPL_ELSE -->Letters<!-- /TMPL_IF --><!-- /TMPL_IF --><!-- /TMPL_IF --></div>
+
+<div id="doc3" class="yui-t2">
+   
+   <div id="bd">
+	<div id="yui-main">
+	<div class="yui-b">
+
+	<!-- TMPL_IF NAME="else" -->
+		
+		<!-- TMPL_IF NAME="search" -->
+		<br />You Searched for <b><!-- TMPL_VAR NAME="searchfield" --></b><p><br />
+		<!-- /TMPL_IF -->
+		<table>
+		<tr>
+			<th>Module</th>
+			<th>Code</th>
+			<th>Name</th>
+			<th>&nbsp;</th>
+			<th>&nbsp;</th>
+		</tr>
+		<!-- TMPL_LOOP NAME="letter" -->
+			<tr bgcolor=<!-- TMPL_VAR NAME="toggle" --> >
+				<td><!-- TMPL_VAR NAME="module" --></td>
+				<td><!-- TMPL_VAR NAME="code" --></td>
+				<td><!-- TMPL_VAR NAME="name" --></td>
+				<td>
+					<a href="/cgi-bin/koha/tools/letter.pl?op=add_form&amp;module=<!-- TMPL_VAR name="module" -->&amp;code=<!-- TMPL_VAR NAME="code" -->">Edit</a>
+				</td>
+				<td>
+					<a href="/cgi-bin/koha/tools/letter.pl?op=delete_confirm&amp;module=<!-- TMPL_VAR name="module"-->&amp;code=<!-- TMPL_VAR NAME="code" -->">Delete</a>
+				</td>
+			</tr>
+		<!-- /TMPL_LOOP -->
+		</table>
+		<form action="/cgi-bin/koha/tools/letter.pl" method="post">
+			<input type="hidden" name="op" value="add_form" />
+			<p>
+			<input type="submit" class="button" value="Add Letter" title="Add Letter" alt="Add Letter" />
+			</p>
+		</form>
+	<!-- /TMPL_IF -->
+	
+	<!-- TMPL_IF NAME="add_form" -->
+	
 	<!-- TMPL_IF name="modify" -->
-			<h2 class="parameters">Modify letter</h2>
+			<h2>Modify letter</h2>
 		<!-- TMPL_ELSE -->
-			<h2 class="parameters">Add letter</h2>
+			<h2>Add letter</h2>
 		<!-- /TMPL_IF -->
 		<form action="/cgi-bin/koha/tools/letter.pl" name="Aform" method="post">
-		<input type="hidden" name="op" value="add_validate">
-		<input type="hidden" name="checked" value="0">
+		<input type="hidden" name="op" value="add_validate" />
+		<input type="hidden" name="checked" value="0" />
 		<!-- TMPL_IF NAME="modify" -->
 			<p>
-				<label class="label100">Koha module:</label>
-				<select name="module">
+				<label for="module">Koha module:</label>
+				<select name="module" id="module">
                                     <!--TMPL_IF Name="catalogue"-->
                                     <option value="catalogue" selected="selected">Catalogue</option>
                                     <!--TMPL_ELSE-->
@@ -185,14 +188,14 @@
 				</select>
 			</p>
 			<p>
-				<label class="label100">Code:</label><input type="hidden" name="code" value="<!-- TMPL_VAR NAME="code" -->"><!-- TMPL_VAR NAME="code" -->
+				<label for="code">Code:</label><input type="hidden" id="code" name="code" value="<!-- TMPL_VAR NAME="code" -->" /><!-- TMPL_VAR NAME="code" -->
 			</p>
 		<!-- /TMPL_IF -->
 		
 		<!-- TMPL_IF NAME="adding" -->
 			<p>
-				<label class="label100">Koha module:</label>
-				<select name="module" onchange="javascript:window.location.href = unescape(window.location.pathname)+'?op=add_form&amp;module='+this.value+'&amp;content='+window.document.forms['Aform'].elements['content'].value;">
+				<label for="module">Koha module:</label>
+				<select name="module" id="module" onchange="javascript:window.location.href = unescape(window.location.pathname)+'?op=add_form&amp;module='+this.value+'&amp;content='+window.document.forms['Aform'].elements['content'].value;">
 						<!--TMPL_IF Name="catalogue"-->
                         <option value="catalogue" selected="selected">Catalogue</option>
 						<!--TMPL_ELSE-->
@@ -226,21 +229,21 @@
 				</select>
 			</p>
 			<p>
-				<label class="label100">Code:</label><input type="text" name="code" size="20" maxlength="20">
+				<label for="code">Code:</label><input type="text" id="code" name="code" size="20" maxlength="20" />
 			</p>
 		<!-- /TMPL_IF -->
 		
 		<p>
-			<label class="label100">Name:</label><input type="text" name="name" size="60" value="<!-- TMPL_VAR NAME="name" -->">
+			<label for="name">Name:</label><input type="text" id="name" name="name" size="60" value="<!-- TMPL_VAR NAME="name" -->" />
 		</p>
 		<p>
-			<label class="label100">Title (mail subject):</label><input type="text" name="title" size="60" value="<!-- TMPL_VAR NAME="title" -->">
+			<label for="title">Title (mail subject):</label><input type="text" id="title" name="title" size="60" value="<!-- TMPL_VAR NAME="title" -->" />
 		</p>
 		<p>
-			<label class="label100">Content (mail content):</label>
+			<label for="SQLfieldname">Content (mail content):</label>
 		</p>
 		<p>		
-		<select name="SQLfieldname" size="9">
+		<select name="SQLfieldname" id="SQLfieldname" size="9">
 			<!-- TMPL_LOOP name="SQLfieldname" -->
 				<option value="<!-- TMPL_VAR name="value"-->"><!-- TMPL_VAR name="text"--></option>
 			<!-- /TMPL_LOOP -->
@@ -248,56 +251,50 @@
         <input type="button" name="insert" value="&gt;&gt;" onclick="insertValueQuery()" title="Insert" />
         <textarea name="content" cols="100" rows="15"><!-- TMPL_VAR NAME="content" --></textarea>
 		</p>
-		<p><input type="button" value="OK" onclick="Check(this.form)" class="button"></p>
+		<p><input type="button" value="OK" onclick="Check(this.form)" class="button" /></p>
 		</form>
 	<!-- /TMPL_IF -->
 	
 	<!-- TMPL_IF NAME="add_validate" -->
 	Data recorded
 	<form action="<!-- TMPL_VAR NAME="action" -->" method="post">
-	<input type="submit" value="OK">
+	<input type="submit" value="OK" />
 	</form>
 	<!-- /TMPL_IF -->
 	
 	<!-- TMPL_IF NAME="delete_confirm" -->
-	<table border="0" cellspacing="0" cellpadding="5">
-		<tr valign="top" bgcolor="#99cc33">
-			<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif">
+	<h3>Delete Letter?</h3>
+	<table>
+		<tr>
+			<td>
 				<b>module / Code</b>
 			</td>
-			<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif">
+			<td>
 				<b><!-- TMPL_VAR name="module"--> / <!-- TMPL_VAR NAME="code" --></b>
 			</td>
 		</tr>
-	
-		<form action="<!-- TMPL_VAR NAME="action" -->" method="post"><input type="hidden" name="op" value="delete_confirmed">
-		<input type="hidden" name="code" value="<!-- TMPL_VAR NAME="code" -->">
-		<input type="hidden" name="module" value="<!-- TMPL_VAR NAME="module" -->">
 		<tr>
 			<td>Name</td>
 			<td><!-- TMPL_VAR NAME="Name" --></td>
 		</tr>
-		<tr>
-			<td colspan="2" align="center">CONFIRM DELETION</td>
-		</tr>
-		<tr>
-			<td>
-				<input type="submit" value="YES">
-				</form>
-			</td>
-			<td>
-				<form action="<!-- TMPL_VAR NAME="action" -->" method="post">
-					<input type="submit" value="NO">
-				</form>
-			</td>
-		</tr>
 	</table>
+			<p><form action="<!-- TMPL_VAR NAME="action" -->" method="post"><input type="hidden" name="op" value="delete_confirmed">
+		<input type="hidden" name="code" value="<!-- TMPL_VAR NAME="code" -->" />
+		<input type="hidden" name="module" value="<!-- TMPL_VAR NAME="module" -->" />
+				<input type="submit" value="YES" />
+				</form>
+
+				<form action="<!-- TMPL_VAR NAME="action" -->" method="post">
+					<input type="submit" value="NO" />
+				</form>
+			</p>
+
 	<!-- /TMPL_IF -->
 	
 	<!-- TMPL_IF NAME="delete_confirmed" -->
 	Data deleted
 	<form action="<!-- TMPL_VAR NAME="action" -->" method="post">
-	<input type="submit" value="OK">
+	<input type="submit" value="OK" />
 	</form>
 	<!-- /TMPL_IF -->
 
