--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
@@ -6,6 +6,8 @@
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; Tools</div>
+
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
@@ -14,53 +16,40 @@
 
 <h1>Koha tools</h1>
 
-<table>
-<caption>Various tools</caption>
-<tr>
-    <td><a href="/cgi-bin/koha/labels/label-home.pl">Label creator</a></td>
-    <td>Create printable labels and barcodes from catalog data.</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/holidays.pl">Holidays</a></td>
-    <td>Define holidays (days where the library is closed)</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/export.pl">Export</a></td>
-    <td>Export data</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/import.pl">Reservoir Import</a></td>
-    <td>Import data into the reservoir.</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></td>
-    <td>Write news for the OPAC and staff interfaces.</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/letter.pl">Letters</a></td>
-    <td>Define letters (notifications for overdues, etc.)</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/overduerules.pl">Overdue rules</a></td>
-    <td>Rules for overdue books</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/inventory.pl">Inventory/stocktaking</a></td>
-    <td>Perform inventory (stocktaking) of your catalogue</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/cleanborrowers.pl">Clean borrowers</a></td>
-    <td>Delete old borrowers and anonymize circulation history (deletes borrower reading history)</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/itemslost.pl">Items lost</a></td>
-    <td>Show lost items</td>
-</tr>
-<tr>
-    <td><a href="/cgi-bin/koha/tools/viewlog.pl">Log viewer</a></td>
-    <td>Browse the system logs</td>
-</tr>
-</table>
+<dl>
+    <dt><a href="/cgi-bin/koha/labels/label-home.pl">Label creator</a></dt>
+    <dd>Create printable labels and barcodes from catalog data.</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/holidays.pl">Holidays</a></dt>
+    <dd>Define holidays (days where the library is closed)</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/export.pl">Export</a></dt>
+    <dd>Export data</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/import.pl">Reservoir Import</a></dt>
+    <dd>Import data into the reservoir.</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></dt>
+    <dd>Write news for the OPAC and staff interfaces.</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/letter.pl">Letters</a></dt>
+    <dd>Define letters (notifications for overdues, etc.)</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/overduerules.pl">Overdue rules</a></dt>
+    <dd>Rules for overdue books</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/inventory.pl">Inventory/stocktaking</a></dt>
+    <dd>Perform inventory (stocktaking) of your catalogue</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/cleanborrowers.pl">Clean borrowers</a></dt>
+    <dd>Delete old borrowers and anonymize circulation history (deletes borrower reading history)</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/itemslost.pl">Items lost</a></dt>
+    <dd>Show lost items</dd>
+
+    <dt><a href="/cgi-bin/koha/tools/viewlog.pl">Log viewer</a></dt>
+    <dd>Browse the system logs</dd>
+</dl>
 
 </div>
 </div>
