--- a/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/tools/tools-home.tmpl
@@ -32,8 +32,8 @@
     <dt><a href="/cgi-bin/koha/tools/koha-news.pl">News</a></dt>
     <dd>Write news for the OPAC and staff interfaces.</dd>
 
-    <dt><a href="/cgi-bin/koha/tools/letter.pl">Letters</a></dt>
-    <dd>Define letters (notifications for overdues, etc.)</dd>
+    <dt><a href="/cgi-bin/koha/tools/letter.pl">Notices</a></dt>
+    <dd>Define notices (print and email notification messages for overdues, etc.)</dd>
 
     <dt><a href="/cgi-bin/koha/tools/overduerules.pl">Overdue rules</a></dt>
     <dd>Rules for overdue books</dd>
