--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/itemslost.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/itemslost.tmpl
@@ -1,12 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Tools &rsaquo; Lost Items</title>
+<title>Koha &rsaquo; Reports &rsaquo; Lost Items</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 <!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/tools-home.pl">Tools</a> &rsaquo; Lost Items</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; Lost Items</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -24,7 +24,7 @@
     <!-- /TMPL_IF -->
 </div>
 
-<form name="f" action="/cgi-bin/koha/tools/itemslost.pl" method="post">
+<form name="f" action="/cgi-bin/koha/reports/itemslost.pl" method="post">
     <label for="orderbyfilter">Set result order by</label>
     <select id="orderbyfilter" name="orderbyfilter">
         <option value=""> --- </option>
@@ -89,7 +89,7 @@
 </div>
 </div>
 <div class="yui-b">
-<!-- TMPL_INCLUDE NAME="tools-menu.inc" -->
+<!-- TMPL_INCLUDE NAME="reports-menu.inc" -->
 </div>
 </div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
