adding action style (probably temporary need)
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global2.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global2.css
@@ -456,3 +456,70 @@ div.yui-b h5 {
 	font-size : 100%;
 	margin : .5em 0;
 }
+
+/*Action button*/
+#action {
+    float:right;
+}
+
+#action a {
+    color: #0072b9;
+    font-weight:bold;
+    background: url( /intranet-tmpl/prog/img/bg-tab.png );
+    font-size : 0.8em;
+    padding:3px;
+    margin-bottom:2px;
+    text-decoration:none;
+    display:block;
+}
+
+#action li {
+    list-style:none;
+}
+/*edit action*/
+#action .edit {
+    display:inline;
+    margin-bottom:10px;
+}
+
+#action .edit a {
+    background:none;
+    background-color : #0072b9;
+    color : white;
+}
+
+#action .edit a:hover {
+    cursor:pointer;
+}
+
+#action .view {
+	display:inline;
+	margin-bottom:5px;
+}
+
+#action .view a {
+    background:none;
+    background-color : #5ab5ee;
+    color : white;
+    margin-top: 1px;
+}
+
+#action .view a:hover {
+    cursor:pointer;
+}
+
+#action .others {
+    display:inline;
+    margin-bottom:5px;
+}
+
+#action .others a {
+    background:none;
+    background-color : #2385C2;
+    color : white;
+    margin-top: 1px;
+}
+
+#action .others a:hover {
+    cursor:pointer;
+}
