BUGFIX : biblionumber instead of oldbiblionumber (2.2 API)
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/z3950_search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/cataloguing/z3950_search.tmpl
@@ -30,7 +30,7 @@
     <input type="hidden" name="isbn" value="<!-- TMPL_VAR NAME="isbn" -->" />
     <input type="hidden" name="issn" value="<!-- TMPL_VAR NAME="issn" -->" />
     <input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->" />
-    <input type="hidden" name="oldbiblionumber" value="<!-- TMPL_VAR NAME="oldbiblionumber" -->" />
+    <input type="hidden" name="biblionumber" value="<!-- TMPL_VAR NAME="biblionumber" -->" />
     
     <!-- TMPL_LOOP name="serverloop" -->
         <p>
